v13.0.0 +
  * [TASK] - TYPO3 13 compatibility

v12.3.0 +
  * [TASK] - Adds support for php 8.2
  * [TASK] - Drops support for php 8.0

v12.2.1 +
  * [TASK] - Facelift detail view
  * [TASK] - UI improvements
  * [FIX] - Surpress import of records with empty typoscript setup
  * [TASK] - Code improvements

v12.2.0 +
  * [FEATURE] - Processing animation
  * [FEATURE] - Multiselect in list view
  * [TASK] - Inline styles to css file conversion
  * [TASK] - Streamline record handling in TypoScriptController
  * [TASK] - Improve flash message handling in TypoScriptController
  * [TASK] - Replace rector config "template" with non php file to prevent errors
  * [FIX] - Fix color allocation in legend

v12.1.0 +
  * [FEATURE] - View difference between original and processed TypoScript
  * [FIX] - Reviewed README installation instructions

v12.0.0 +
  * initial release