@@ -1,0 +1,10 @@
+<?php
+
+use a9f\Fractor\Configuration\FractorConfiguration;
+use a9f\Typo3Fractor\Set\Typo3LevelSetList;
+
+return FractorConfiguration::configure()
+    ->withSets([
+        Typo3LevelSetList::%%TYPO3PREV%%,
+        Typo3LevelSetList::%%TYPO3CUR%%
+    ]);
