@@ -1,5 +1,7 @@
 v13.0.0 +
   * [TASK] - TYPO3 13 compatibility
+  * [TASK] - Drop TYPO3 12 compatibility
+  * [TASK] - Replace typo3-rector with typo3-fractor
 
 v12.3.0 +
   * [TASK] - Adds support for php 8.2
